--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-size: cover;
+    background-position: center;
 }
 
 .blocks {
@@ -44,10 +46,11 @@ body {
 
 .menu-icon {
     width: 30px;
-    height: 5px;
+    height: 30px; /* Updated height to make it square */
     background-color: #333;
     position: relative;
     transition: transform 0.3s;
+    cursor: pointer;
 }
 
 .menu.open ul {
